# HPR-RS

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
src/ui/: READ_ME_BEFORE_MODIFYING_UI.txt  about-view.slint  app-row.slint  app-window.slint  card.slint  data-view.slint  extension-view.slint  feedback-view.slint  goals-view.slint  history-range-view.slint  insights-view.slint  live-dot.slint  misc-image-view.slint  palette.slint  project-view.slint  section-header.slint  settings-view.slint  side-bar-button.slint  switch-row.slint  tab-view.slint  themes-view.slint  timeline-view.slint  types.slint
src/window/: CurrentWindowManager.rs  WindowBackend.rs  WindowUtilities.rs  mod.rs
